--- a/validators.yml
+++ b/validators.yml
@@ -72,10 +72,6 @@ either:
 email:
   valid: /^[A-Z0-9._%+-]+@[A-Z0-9.-]+\.[A-Z]{2,4}$/i
 
-equals:
-  valid: /^\s*$1\s*$/
-  error: $name must equal $1
-
 exists:
   error: $name does not exist
 
@@ -137,8 +133,8 @@ money:
   valid: /^\d+(\.\d+)?$/
 
 must_be:
-  valid: /^$1$/
-  error: $name must be $2
+  valid: equal($1)
+  error: $name must be $1
 
 name:
   valid:
