--- a/.htaccess
+++ b/.htaccess
@@ -2,7 +2,7 @@ Options +Indexes
 RewriteEngine on
 RewriteRule ^index\.(php|html?)$ index.php [L]
 RewriteRule ^(\w+[\w\/]*)(?:\?(.+))?$ index.php?path=$1&$2 [NC,L,QSA]
-RewriteRule \.(yml|conf|gz|log)$ - [R=404,NC,L]
+RewriteRule \.(yml|conf|gz|log|htaccess)$ - [R=404,NC,L]
 RewriteRule ^\.git(/?|/.*)$ - [R=404,NC,L]
 php_flag log_errors on
 #php_flag display_errors on
